Working basic authentication.