@@ -15,10 +15,10 @@ import org.springframework.web.bind.annotation.*;
 import org.springframework.web.multipart.MultipartFile;
 import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
 import pw.react.backend.exceptions.ResourceNotFoundException;
-import pw.react.backend.exceptions.UnauthorizedException;
 import pw.react.backend.models.Company;
 import pw.react.backend.models.CompanyLogo;
-import pw.react.backend.services.*;
+import pw.react.backend.services.CompanyService;
+import pw.react.backend.services.LogoService;
 import pw.react.backend.web.CompanyDto;
 import pw.react.backend.web.UploadFileResponse;
 
@@ -38,12 +38,10 @@ public class CompanyController {
 
     public static final String COMPANIES_PATH = "/companies";
 
-    private final SecurityService securityService;
     private final CompanyService companyService;
     private LogoService companyLogoService;
 
-    public CompanyController(SecurityService securityService, CompanyService companyService) {
-        this.securityService = securityService;
+    public CompanyController(CompanyService companyService) {
         this.companyService = companyService;
     }
 
@@ -56,15 +54,12 @@ public class CompanyController {
     public ResponseEntity<Collection<CompanyDto>> createCompanies(@RequestHeader HttpHeaders headers,
                                                                   @Valid @RequestBody List<CompanyDto> companies) {
         logHeaders(headers);
-        if (securityService.isAuthorized(headers)) {
-            List<Company> createdCompanies = companies.stream().map(CompanyDto::convertToCompany).collect(toList());
-            List<CompanyDto> result = companyService.batchSave(createdCompanies)
-                    .stream()
-                    .map(CompanyDto::valueFrom)
-                    .toList();
-            return ResponseEntity.status(HttpStatus.CREATED).body(result);
-        }
-        throw new UnauthorizedException("Unauthorized access to resources.", COMPANIES_PATH);
+        List<Company> createdCompanies = companies.stream().map(CompanyDto::convertToCompany).collect(toList());
+        List<CompanyDto> result = companyService.batchSave(createdCompanies)
+                .stream()
+                .map(CompanyDto::valueFrom)
+                .toList();
+        return ResponseEntity.status(HttpStatus.CREATED).body(result);
     }
 
     private void logHeaders(@RequestHeader HttpHeaders headers) {
@@ -79,22 +74,16 @@ public class CompanyController {
     @GetMapping(path = "/{companyId}")
     public ResponseEntity<CompanyDto> getCompany(@RequestHeader HttpHeaders headers, @PathVariable Long companyId) {
         logHeaders(headers);
-        if (securityService.isAuthorized(headers)) {
-            CompanyDto result = companyService.getById(companyId)
-                    .map(CompanyDto::valueFrom)
-                    .orElseThrow(() -> new ResourceNotFoundException(String.format("Company with %d does not exist", companyId)));
-            return ResponseEntity.ok(result);
-        }
-        return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(CompanyDto.EMPTY);
+        CompanyDto result = companyService.getById(companyId)
+                .map(CompanyDto::valueFrom)
+                .orElseThrow(() -> new ResourceNotFoundException(String.format("Company with %d does not exist", companyId)));
+        return ResponseEntity.ok(result);
     }
 
     @GetMapping(path = "")
     public ResponseEntity<Collection<CompanyDto>> getAllCompanies(@RequestHeader HttpHeaders headers) {
         logHeaders(headers);
-        if (securityService.isAuthorized(headers)) {
-            return ResponseEntity.ok(companyService.getAll().stream().map(CompanyDto::valueFrom).toList());
-        }
-        throw new UnauthorizedException("Request is unauthorized", COMPANIES_PATH);
+        return ResponseEntity.ok(companyService.getAll().stream().map(CompanyDto::valueFrom).toList());
     }
 
     @PutMapping(path = "/{companyId}")
@@ -102,24 +91,17 @@ public class CompanyController {
     public void updateCompany(@RequestHeader HttpHeaders headers, @PathVariable Long companyId,
                               @Valid @RequestBody CompanyDto updatedCompany) {
         logHeaders(headers);
-        if (securityService.isAuthorized(headers)) {
-            companyService.updateCompany(companyId, CompanyDto.convertToCompany(updatedCompany));
-        } else {
-            throw new UnauthorizedException("Request is unauthorized", COMPANIES_PATH);
-        }
+        companyService.updateCompany(companyId, CompanyDto.convertToCompany(updatedCompany));
     }
 
     @DeleteMapping(path = "/{companyId}")
     public ResponseEntity<String> deleteCompany(@RequestHeader HttpHeaders headers, @PathVariable Long companyId) {
         logHeaders(headers);
-        if (securityService.isAuthorized(headers)) {
-            boolean deleted = companyService.deleteCompany(companyId);
-            if (!deleted) {
-                return ResponseEntity.badRequest().body(String.format("Company with id %s does not exists.", companyId));
-            }
-            return ResponseEntity.ok(String.format("Company with id %s deleted.", companyId));
+        boolean deleted = companyService.deleteCompany(companyId);
+        if (!deleted) {
+            return ResponseEntity.badRequest().body(String.format("Company with id %s does not exists.", companyId));
         }
-        throw new UnauthorizedException("Unauthorized access to resources.", COMPANIES_PATH);
+        return ResponseEntity.ok(String.format("Company with id %s deleted.", companyId));
     }
 
     @PostMapping("/{companyId}/logo")
@@ -127,33 +109,26 @@ public class CompanyController {
                                                          @PathVariable Long companyId,
                                                          @RequestParam("file") MultipartFile file) {
         logHeaders(headers);
-        if (securityService.isAuthorized(headers)) {
-            CompanyLogo companyLogo = companyLogoService.storeLogo(companyId, file);
+        CompanyLogo companyLogo = companyLogoService.storeLogo(companyId, file);
 
-            String fileDownloadUri = ServletUriComponentsBuilder.fromCurrentContextPath()
-                    .path("/companies/" + companyId + "/logo/")
-                    .path(companyLogo.getFileName())
-                    .toUriString();
-            UploadFileResponse response = new UploadFileResponse(
-                    companyLogo.getFileName(),
-                    fileDownloadUri,
-                    file.getContentType(),
-                    file.getSize()
-            );
-            return ResponseEntity.status(HttpStatus.CREATED).body(response);
-        }
-        throw new UnauthorizedException("Unauthorized access to resources.", COMPANIES_PATH);
+        String fileDownloadUri = ServletUriComponentsBuilder.fromCurrentContextPath()
+                .path("/companies/" + companyId + "/logo/")
+                .path(companyLogo.getFileName())
+                .toUriString();
+        UploadFileResponse response = new UploadFileResponse(
+                companyLogo.getFileName(),
+                fileDownloadUri,
+                file.getContentType(),
+                file.getSize()
+        );
+        return ResponseEntity.status(HttpStatus.CREATED).body(response);
     }
 
     @GetMapping(value = "/{companyId}/logo", produces = MediaType.APPLICATION_OCTET_STREAM_VALUE)
     public @ResponseBody byte[] getLog(@RequestHeader HttpHeaders headers, @PathVariable Long companyId) {
         logHeaders(headers);
-        if (securityService.isAuthorized(headers)) {
-            CompanyLogo companyLogo = companyLogoService.getCompanyLogo(companyId);
-            return companyLogo.getData();
-        }
-
-        throw new UnauthorizedException("Unauthorized access to resources.", COMPANIES_PATH);
+        CompanyLogo companyLogo = companyLogoService.getCompanyLogo(companyId);
+        return companyLogo.getData();
     }
 
     @Operation(summary = "Get logo for company")
@@ -161,26 +136,23 @@ public class CompanyController {
             @ApiResponse(
                     responseCode = "200",
                     description = "Get log by company id",
-                    content = { @Content(mediaType = "application/json") }
+                    content = {@Content(mediaType = "application/json")}
             ),
             @ApiResponse(
                     responseCode = "401",
                     description = "Unauthorized operation",
-                    content = { @Content(mediaType = "application/json") }
+                    content = {@Content(mediaType = "application/json")}
             )
     })
     @GetMapping(value = "/{companyId}/logo2")
     public ResponseEntity<Resource> getLogo2(@RequestHeader HttpHeaders headers, @PathVariable Long companyId) {
         logHeaders(headers);
-        if (securityService.isAuthorized(headers)) {
-            CompanyLogo companyLogo = companyLogoService.getCompanyLogo(companyId);
+        CompanyLogo companyLogo = companyLogoService.getCompanyLogo(companyId);
 
-            return ResponseEntity.ok()
-                    .contentType(MediaType.parseMediaType(companyLogo.getFileType()))
-                    .header(HttpHeaders.CONTENT_DISPOSITION, "attachment; filename=\"" + companyLogo.getFileName() + "\"")
-                    .body(new ByteArrayResource(companyLogo.getData()));
-        }
-        throw new UnauthorizedException("Unauthorized access to resources.", COMPANIES_PATH);
+        return ResponseEntity.ok()
+                .contentType(MediaType.parseMediaType(companyLogo.getFileType()))
+                .header(HttpHeaders.CONTENT_DISPOSITION, "attachment; filename=\"" + companyLogo.getFileName() + "\"")
+                .body(new ByteArrayResource(companyLogo.getData()));
     }
 
     @Operation(summary = "Delete logo for given company")
@@ -188,42 +160,36 @@ public class CompanyController {
             @ApiResponse(
                     responseCode = "204",
                     description = "Logo deleted",
-                    content = { @Content(mediaType = "application/json") }
+                    content = {@Content(mediaType = "application/json")}
             ),
             @ApiResponse(
                     responseCode = "401",
                     description = "Unauthorized operation",
-                    content = { @Content(mediaType = "application/json") }
+                    content = {@Content(mediaType = "application/json")}
             )
     })
     @DeleteMapping(value = "/{companyId}/logo")
     @ResponseStatus(HttpStatus.NO_CONTENT)
     public void removeLogo(@RequestHeader HttpHeaders headers, @PathVariable String companyId) {
         logHeaders(headers);
-        if (securityService.isAuthorized(headers)) {
-            companyLogoService.deleteCompanyLogo(Long.parseLong(companyId));
-        }
-        throw new UnauthorizedException("Unauthorized access to resources.", COMPANIES_PATH);
+        companyLogoService.deleteCompanyLogo(Long.parseLong(companyId));
     }
 
     @PostMapping(path = "/benchmark/{size}")
     public ResponseEntity<String> benchmark(@RequestHeader HttpHeaders headers, @PathVariable(name = "size") int size) {
         logHeaders(headers);
-        if (securityService.isAuthorized(headers)) {
-            LocalDateTime start = LocalDateTime.now();
-            companyService.batchSave(Stream.generate(() -> {
-                Company company = new Company();
-                company.setStartDateTime(LocalDateTime.now());
-                company.setName(UUID.randomUUID().toString());
-                company.setBoardMembers(new Random().nextInt(100));
-                return company;
-            }).limit(size).toList());
-            Duration duration = Duration.between(start, LocalDateTime.now());
-            String message = String.format("Benchmark - insert %d records, took %d sec", size, duration.getSeconds());
-            log.info(message);
-            return ResponseEntity.ok(message);
-        }
-        throw new UnauthorizedException("Unauthorized access to resources.", COMPANIES_PATH);
+        LocalDateTime start = LocalDateTime.now();
+        companyService.batchSave(Stream.generate(() -> {
+            Company company = new Company();
+            company.setStartDateTime(LocalDateTime.now());
+            company.setName(UUID.randomUUID().toString());
+            company.setBoardMembers(new Random().nextInt(100));
+            return company;
+        }).limit(size).toList());
+        Duration duration = Duration.between(start, LocalDateTime.now());
+        String message = String.format("Benchmark - insert %d records, took %d sec", size, duration.getSeconds());
+        log.info(message);
+        return ResponseEntity.ok(message);
     }
 
 }
